; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_fwohci.c_fwohci_irx_disable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/firewire/extr_fwohci.c_fwohci_irx_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.firewire_comm = type { i32 }
%struct.fwohci_softc = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@OHCI_CNTL_DMA_RUN = common dso_local global i32 0, align 4
@OHCI_IR_MASKCLR = common dso_local global i32 0, align 4
@OHCI_IR_STATCLR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"fwirxd\00", align 1
@hz = common dso_local global i32 0, align 4
@FWXFERQ_RUNNING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.firewire_comm*, i32)* @fwohci_irx_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fwohci_irx_disable(%struct.firewire_comm* %0, i32 %1) #0 {
  %3 = alloca %struct.firewire_comm*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.fwohci_softc*, align 8
  store %struct.firewire_comm* %0, %struct.firewire_comm** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.firewire_comm*, %struct.firewire_comm** %3, align 8
  %7 = bitcast %struct.firewire_comm* %6 to %struct.fwohci_softc*
  store %struct.fwohci_softc* %7, %struct.fwohci_softc** %5, align 8
  %8 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @OHCI_IRCTLCLR(i32 %9)
  %11 = load i32, i32* @OHCI_CNTL_DMA_RUN, align 4
  %12 = call i32 @OWRITE(%struct.fwohci_softc* %8, i32 %10, i32 %11)
  %13 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %14 = load i32, i32* @OHCI_IR_MASKCLR, align 4
  %15 = load i32, i32* %4, align 4
  %16 = shl i32 1, %15
  %17 = call i32 @OWRITE(%struct.fwohci_softc* %13, i32 %14, i32 %16)
  %18 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %19 = load i32, i32* @OHCI_IR_STATCLR, align 4
  %20 = load i32, i32* %4, align 4
  %21 = shl i32 1, %20
  %22 = call i32 @OWRITE(%struct.fwohci_softc* %18, i32 %19, i32 %21)
  %23 = load i32, i32* @hz, align 4
  %24 = call i32 @pause(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %26 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = load i32, i32* %4, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i64 %29
  %31 = call i32 @fwohci_db_free(%struct.TYPE_4__* %30)
  %32 = load i32, i32* @FWXFERQ_RUNNING, align 4
  %33 = xor i32 %32, -1
  %34 = load %struct.fwohci_softc*, %struct.fwohci_softc** %5, align 8
  %35 = getelementptr inbounds %struct.fwohci_softc, %struct.fwohci_softc* %34, i32 0, i32 0
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %35, align 8
  %37 = load i32, i32* %4, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i64 %38
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = and i32 %42, %33
  store i32 %43, i32* %41, align 4
  ret i32 0
}

declare dso_local i32 @OWRITE(%struct.fwohci_softc*, i32, i32) #1

declare dso_local i32 @OHCI_IRCTLCLR(i32) #1

declare dso_local i32 @pause(i8*, i32) #1

declare dso_local i32 @fwohci_db_free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
